# minimal-shielded-pool

./: .gitignore  EXPLAINER.md  README.md
contracts/: README.md  foundry.toml
contracts/reference/: export_vectors.patch  gen_poseidon_sol.py  poseidon16.py  round_constants.json
contracts/src/: Poseidon16.sol
contracts/test/: Poseidon16Vectors.t.sol
contracts/vectors/: README.md  poseidon16_vectors.json
devnet/: README.md  REVIEW.md  run_live.sh
pool/: note.py
prover/: .gitignore  Cargo.toml  README.md
prover/src/: lib.rs
prover/tests/: spend.rs
wallet/: deploy_flow.sh
