[package]
name = "pool-prover"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Prove and verify PQ shielded pool spends (leanVM STARK, pinned commit)"

[dependencies]
lean_prover = { git = "https://github.com/leanEthereum/leanVM", rev = "12e61512416548e743040aab4daf83c58a5c5476" }
lean_compiler = { git = "https://github.com/leanEthereum/leanVM", rev = "12e61512416548e743040aab4daf83c58a5c5476" }
lean_vm = { git = "https://github.com/leanEthereum/leanVM", rev = "12e61512416548e743040aab4daf83c58a5c5476" }
backend = { git = "https://github.com/leanEthereum/leanVM", rev = "12e61512416548e743040aab4daf83c58a5c5476" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# match leanVM's own release profile so the measured numbers carry over
[profile.release]
lto = "thin"
codegen-units = 1
